Swagger sample to documentation
